--- a/bower.json
+++ b/bower.json
@@ -24,9 +24,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.2"
+    "angular": "1.4.7"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.2"
+    "angular-mocks": "1.4.7"
   }
 }
